[gd_scene load_steps=4 format=2]

[ext_resource path="res://LazerBeam.gd" type="Script" id=1]
[ext_resource path="res://Sprites/lazer_particle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.713198, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="LazerBeam" type="RayCast2D"]
cast_to = Vector2( 1000, 0 )
collision_mask = 3
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 1, 0.631373, 0.631373, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="StartPointParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
randomness = 0.5
fixed_fps = 60
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
angular_velocity = 12.0
angular_velocity_random = 0.5
scale_amount_random = 0.5
color_ramp = SubResource( 1 )

[node name="BeamParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
randomness = 0.5
fixed_fps = 60
local_coords = false
texture = ExtResource( 2 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
angular_velocity = 12.0
angular_velocity_random = 0.5
tangential_accel = 180.0
scale_amount_random = 0.5
color_ramp = SubResource( 1 )

[node name="CollisionParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
randomness = 0.5
fixed_fps = 60
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 4.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
angular_velocity = 12.0
angular_velocity_random = 0.5
scale_amount_random = 0.5
color_ramp = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
